--- a/src/main/webapp/WEB-INF/common/navigation.jspf
+++ b/src/main/webapp/WEB-INF/common/navigation.jspf
@@ -1,5 +1,7 @@
 
 <nav class="example2 navbar navbar-default">
+<c:set var="context" value="${pageContext.request.contextPath}" />
+
     <div class="container-fluid">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar2">
@@ -16,7 +18,7 @@
           <li class="active"><a href="#">Home</a></li>
           <li><a href="#">Events</a></li>
 		  <li><a href="https://springoneplatform.io/">SpringOne 2018</a></li>
-		  <li><a href="/logout.do">Logout</a></li>
+		  <li><a href="${context}/logout.do">Logout</a></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
