--- a/src/main/webapp/WEB-INF/common/footer.jspf
+++ b/src/main/webapp/WEB-INF/common/footer.jspf
@@ -1,6 +1,6 @@
 
 <footer class="footer">
-	<div>footer content</div>
+	<div></div>
 </footer>
 
 <script src="webjars/jquery/1.9.1/jquery.min.js"></script>
